--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
-      font-family: 'Inter', sans-serif;
-      background: #f9fafb;
-      color: #1f2937;
+      font-family: 'Assistant', sans-serif;
+      background: #FFFFFF;
+      color: #333;
       line-height: 1.6;
       padding: 2rem;
     }
